--- a/static/css/courseregform/style.css
+++ b/static/css/courseregform/style.css
@@ -78,19 +78,19 @@ body{
     text-align: center;
     font-size: 28px;
 }
-.register .form-container form{
+.register .form-container form  .form-group{
     display: flex;
     flex-direction: column;
 }
 
-.register .form-container form label{
+.register .form-container form .form-group label{
     font-size: 18px;
 }
 
-.register .form-container form input[type="text"],
-.form-container form input[type="number"],
-.form-container form input[type="email"],
-.form-container form input[type="phone"]
+.register .form-container form .form-group input[type="text"],
+.form-container form .form-group input[type="number"],
+.form-container form .form-group input[type="email"],
+.form-container form .form-group input[type="phone"]
 {
     height: 24px;
     border: 1px #cac8c8 solid;
@@ -102,7 +102,7 @@ body{
     font-weight: 300;
     color: #8a8a8a;
 }
-.form-container form select{
+.form-container form .form-group select{
     height: 36px;
     border: 1px #cac8c8 solid;
     border-radius: 8px;
@@ -122,6 +122,13 @@ body{
     outline: none;
     border-color: #4d4d4d;
 }
+
+.error{
+    color: rgb(249 90 90);
+    font-weight: 400;
+    font-size: 14px!important;
+}
+
 .form-container form .submit-button{
     display: block;
     width: 25%;
